--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^2.24.0
-  firebase_auth: ^4.16.0
+  firebase_auth: ^4.20.0
   cloud_firestore: ^4.14.0
   google_maps_flutter: ^2.5.0
   geolocator: ^10.1.0
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.19.0
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
+  flutter_2fa: ^1.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
