--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
   flutter_2fa: ^1.0.4
+  flutter_dotenv: ^5.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -79,6 +80,7 @@ flutter:
   uses-material-design: true
   assets:
       - assets/images/
+      - .env
 
   # To add assets to your application, add an assets section, like this:
   # assets:
