--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,12 @@ dependencies:
   latlong2: ^0.9.0
   flutter_2fa: ^1.0.4
   flutter_dotenv: ^5.1.0
+  flutter_map_tile_caching: ^9.0.1
+  flutter_polyline_points: ^2.1.0
+  shared_preferences: ^2.3.0
+  fl_chart: ^0.70.2
+  animate_do: ^4.2.0
+  connectivity_plus: ^6.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
