--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   animate_do: ^4.2.0
   connectivity_plus: ^6.0.5
   google_sign_in: ^6.2.1
+  permission_handler: ^11.4.0
+  responsive_framework: ^1.5.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
