--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   permission_handler: ^11.4.0
   responsive_framework: ^1.5.1
   cupertino_icons: ^1.0.8
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
