Complete app with apk

--- a/key.properties
+++ b/key.properties
@@ -1,4 +1,4 @@
-storeFile=my-release-key.jks
-storePassword=123456
-keyPassword=123456
+storeFile=android/my-keystore.jks
 keyAlias=my-alias
+keyPassword=Mershad
+storePassword=Mershad
